# learn_gazebo_ros_control

rrbot_controller/: CMakeLists.txt  package.xml  rrbot_angle_controller_plugin.xml
rrbot_controller/config/: controllers.yaml
rrbot_controller/include/rrbot_controller/: rrbot_angle_controller.h
rrbot_controller/launch/: load_controller.launch
rrbot_controller/src/: rrbot_angle_controller.cpp
rrbot_description/urdf/: rrbot.gazebo  rrbot.xacro
rrbot_gazebo/: CMakeLists.txt  package.xml  rrbot_hw_sim_plugins.xml
rrbot_gazebo/include/rrbot_gazebo/: rrbot_hw_sim.h
rrbot_gazebo/launch/: rrbot_world.launch
rrbot_gazebo/src/: rrbot_hw_sim.cpp
