<?xml version="1.0"?>
<package format="2">
  <name>rrbot_gazebo</name>
  <version>0.1.0</version>
  <description>rrbot_gazebo</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_dev</depend>

  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>rrbot_control</depend>
  <depend>rrbot_description</depend>
  <depend>xacro</depend>


  <export>
    <gazebo_ros_control plugin="${prefix}/rrbot_hw_sim_plugins.xml"/>
    <gazebo_ros gazebo_model_path="${prefix}"/>
  </export>
</package>
